--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "app_base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Dashboard - {{ farm.name }} - AquaTrace{% endblock %}
 
