--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,4 +1,4 @@
-{% extends "app_base.html" %}
+{% extends "base.html" %}
 
 {% block title %}AquaTrace - Aquaculture Monitoring & Management{% endblock %}
 
